<resources>
    <string name="app_name">BaseContructor</string>
    <string name="action_settings">Settings</string>
    <string name="tip_phone">please enter a phone number</string>
    <string name="button_dialog">dialog</string>
    <string name="button_function">功能</string>
    <string name="button_layout">布局</string>
    <string name="button_line1">线性布局1</string>
    <string name="button_relative1">相对布局1</string>
    <string name="button_frame1">帧布局1</string>
    <string name="button_access">访问</string>
    <string name="button_confirm">确定</string>
    <string name="button_example">示例</string>
    <string name="button_little_game">小游戏</string>
    <string name="tip_url">请输入URL</string>
    <string name="button_network_watcher">网络源码查看器</string>
    <string name="button_choose_phone">选择手机号码</string>
    <string name="button_choose_message">选择发送内容</string>

    <string name="title_activity_layout_total">layout_total</string>
</resources>
