<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:layout_height="wrap_content"
        android:id="@+id/button_function"
        android:text="@string/button_function"
        android:layout_width="0dp"
        android:layout_weight="1"
        />
     <Button
         android:layout_height="wrap_content"
         android:id="@+id/button_layout"
         android:text="@string/button_layout"
         android:layout_width="0dp"
         android:layout_weight="1"
         />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/button_example"
        android:text="@string/button_example"
        android:layout_width="0dp"
        android:layout_weight="1"
        />
    <Button
        android:layout_height="wrap_content"
        android:id="@+id/button_roll_game"
        android:text="@string/button_little_game"
        android:layout_width="0dp"
        android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
             <Button
            android:layout_height="wrap_content"
            android:id="@+id/button_effect"
            android:text="特效集合"
            android:layout_width="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>
</LinearLayout>
