<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_line1"
            android:id="@+id/button_line1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_relative1"
            android:id="@+id/button_relative1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_frame1"
            android:id="@+id/button_frame1"
            />
    </LinearLayout>

</LinearLayout>
